聞くなかれ

--- a/html2-1.html
+++ b/html2-1.html
@@ -29,6 +29,7 @@
         <li><a href="#">CSS</a></li>
         <li><a href="#">PHP</a></li>
         <li><a href="#">お問い合わせ</a></li>
+        <li><a href="#">聞くなかれ</a></li>
       </ul>
     </div>
 
