--- a/html2-1.html
+++ b/html2-1.html
@@ -30,6 +30,7 @@
         <li><a href="#">PHP</a></li>
         <li><a href="#">お問い合わせ</a></li>
         <li><a href="#">聞くなかれ</a></li>
+        <li><a href="#">new</a></li>
       </ul>
     </div>
 
