--- a/html2-1.html
+++ b/html2-1.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="copyright">
-      <p>MojoSuryaVillageはTownを目指しているブログです(@-@)</p>
+      <p>MojoSuryaVillageはDownTownを目指しているブログです(@-@)</p>
       <p>Copyright &copy; mojosuryvillage</p>
     </div>
 
